FOF 3.3.6
================================================================================
+ DynamicGroups helper
# [LOW] Warning from the Ip helper under CLI or when REMOTE_ADDR is not defined by the server

FOF 3.3.5
================================================================================
! The mere existence getGenerator method causes a fatal error in DataModel on PHP 5.3 and 5.4. Pulled out into a Trait.

FOF 3.3.4
================================================================================
# [HIGH] Saving or cancelling the edit of an item with an 'access' field leaked the item's access as a filter value in the Browse view
# [MEDIUM] DataController's defaultsForAdd didn't do anything
# [HIGH] DateDecorator::add actually subtracted the time period

FOF 3.3.3
================================================================================
# [HIGH] DateDecorator did not work properly with add(), sub() and modify()

FOF 3.3.2
================================================================================
+ Encryption service in the container
+ PHP Generator support in DataModel for easily iterating very large datasets under PHP 5.5 or later
# [MEDIUM] Using getUser() under CLI could cause a problem if no user ID was passed

FOF 3.3.1
================================================================================
+ Support for precompiled Blade templates for broken hosts without PHP Tokenizer support.
~ Improve detection of stream wrapper registration capability
# [HIGH] Scaffolding does not work on PHP 7.2 (see changelog for version 3.1.4 for related issue)
# [HIGH] Blade templates don't work at all when your cache folders are not writable
# [LOW] FEF-based components have the wrong padding in the backend due to extra classes being added to the container

FOF 3.3.0
================================================================================
+ JHtml helpers for browse and edit views to help us convert from XML forms to FEF